// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test GifsGrid component should show items when load img useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    samurai x
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Ese es"
      url="https://img.jpg"
    />
  </div>
</Fragment>
`;

exports[`should test GifsGrid component should show properly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    samurai x
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
